--- a/ramen/.prettierrc
+++ b/ramen/.prettierrc
@@ -1,1 +1,9 @@
-{}
+{
+    "$schema": "http://json.schemastore.org/prettierrc",
+    "tabWidth": 4,
+    "arrowParens": "avoid",
+    "printWidth": 140,
+    "trailingComma": "none",
+    "endOfLine": "auto"
+  }
+  
